chore: ng-includes

--- a/src/index.html
+++ b/src/index.html
@@ -103,7 +103,7 @@
             ng-show/hng-hide: interacts with the css - adds or remove a 'display: none;'
             performance must me considered when choosing one of them
             -->
-
     </div>
+    <div ng-include="'footer.html'"></div>
 </body>
 </html>
