chore: ng-messages

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
     <title>Lista Telefônica</title>
 
     <script src="../lib/angular.js"></script>
+    <script src="../lib/angular-messages.js"></script>
+    
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <style>
@@ -34,7 +36,7 @@
 
     <script>
         //module creation - a container for different parts from the app 
-        angular.module("listaTelefonica", []);
+        angular.module("listaTelefonica", ["ngMessages"]);
         //module configuration          //controller constructor function  - contains bussiness logic            //scop - context where the model is stored so that controllers, directives and expressions can access it
         angular.module("listaTelefonica").controller("listaTelefonicaController", function($scope) {
             // scopes can watch expressions and propagate events
@@ -100,19 +102,35 @@
         <hr/>
 
         <form name="contatoForm"> <!-- creates an objet for validation in scope -->
-            <input class="form-control" type="text" ng-model="contato.nome" name="nome" placeholder="Nome" ng-required="true"/>
-            <input class="form-control" type="text" ng-model="contato.telefone" name="telefone" placeholder="Telefone" ng-required="true"//>
+            <input class="form-control" type="text" ng-model="contato.nome" name="nome" placeholder="Nome" ng-required="true" ng-minlength="2"/>
+            <input class="form-control" type="text" ng-model="contato.telefone" name="telefone" placeholder="Telefone" ng-required="true" ng-pattern="/^\d{4,5}-\d{4}$/"/>
 
             <select class="form-control" ng-model="contato.operadora" ng-options="operadora.nome for operadora in operadoras">
                 <option value="">Selecione uma operadora</option>                      <!--     operadora.codigo as operadora.nome  value = codigo    -->
             </select>   
         </form>  
         <!-- $dirty if the user erases the field once, it will be "dirty" and the message will be displayed -->
-        <div ng-show="contatoForm.nome.$invalid && contatoForm.nome.$dirty" class="alert alert-danger">
-            Por favor, preencha o nome!
+
+        <div ng-messages="contatoForm.nome.$error" class="alert alert-danger">
+            <div ng-show="required">
+                Por favor, preencha o nome!
+            </div>
+            <div ng-show="minlength">
+                O campo nome deve conter, no mínimo, 2 caracteres!
+            </div>
         </div>
-        <div ng-show="contatoForm.telefone.$invalid && contatoForm.telefone.$dirty"" class="alert alert-danger">
+                     <!-- <div ng-show="contatoForm.nome.$error.required && contatoForm.nome.$dirty" class="alert alert-danger">
+                            Por favor, preencha o nome!
+                        </div>
+                        <div ng-show="contatoForm.nome.$error.minlength" class="alert alert-danger">
+                            O campo nome deve conter, no mínimo, 2 caracteres!
+                        </div> -->
+
+        <div ng-show="contatoForm.telefone.$error.required && contatoForm.telefone.$dirty" class="alert alert-danger">
             Por favor, preencha o telefone!
+        </div>
+        <div ng-show="contatoForm.telefone.$error.pattern" class="alert alert-danger">
+            O campo telefone deve conter o formato: 12345-6789
         </div>
                                                              <!-- operadora.nome group by operadora.categoria  divide carriers into categories -->
         <button class="btn btn-primary btn-block" ng-click="adicionarContato(contato)" ng-disabled="contatoForm.$invalid">Adicionar novo contato</button>
