--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 
     <style>
         .jumbotron {
-            width: 27rem;
+            width: 45rem;
             text-align: center;
             margin-top: 1.25rem;
             margin-left: auto;
@@ -43,9 +43,9 @@
             // they are an execution context for expressions
             $scope.app = "Lista Telefônica";
             $scope.contatos = [
-                {nome: "João", telefone: "12345678", cor: "blue"},
-                {nome: "Viviane", telefone: "87654321", cor: "purple"},
-                {nome: "Sofia", telefone: "132435465", cor: "orange"},
+                {nome: "João", telefone: "12345678", data: new Date(), operadora: {nome: "Oi", código: 14, categoria: "celular"}},
+                {nome: "Viviane", telefone: "87654321", data: new Date(), operadora: {nome: "Vivo", código: 15, categoria: "celular"}},
+                {nome: "Sofia", telefone: "132435465", data: new Date(), data: new Date(), operadora: {nome: "Tim", código: 41, categoria: "celular"}},
             ];
             $scope.operadoras = [
                 {nome: "Oi", código: 14, categoria: "Celular"},
@@ -83,14 +83,15 @@
                 <th>Nome</th>
                 <th>Telefone</th>
                 <th>Operadora</th>
-                <th></th>
+                <th>Data</th>
             </tr>
             <tr ng-class="{'selecionado negrito': contato.selecionado}" ng-repeat="contato in contatos">
                 <td><input type="checkbox" ng-model="contato.selecionado"/></td>
-                <td>{{contato.nome}}</td>
+                <td>{{contato.nome | uppercase }}</td>
                 <td>{{contato.telefone}}</td>
-                <td>{{contato.operadora.nome}}</td>
-                <td><div style="width: 1.25rem; height: 1.25rem;" ng-style="{'background-color': contato.cor}"></div></td>
+                <td>{{contato.operadora.nome | lowercase }}</td>
+                <td>{{contato.data | date: 'dd/MM/yyyy HH:mm'}}</td>
+                <!-- <td><div style="width: 1.25rem; height: 1.25rem;}"></div></td> -->
                 <!-- alternative way:
                     <td ng-repeat="(key,value) in contato">
                         {{value}}
